applications/velero/10-velero_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: velero
    monitoring: enabled
    name: velero
    istio-injection: disabled
    # istio.io/dataplane-mode: ambient
  name: velero
spec:
  finalizers:
    - kubernetes
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: velero-ui
    monitoring: enabled
    name: velero-ui
    istio-injection: disabled
    # istio.io/dataplane-mode: ambient
  name: velero-ui
spec:
  finalizers:
    - kubernetes
---
