applications/velero/10_velero_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ${NAMESPACE}
    monitoring: enabled
    name: ${NAMESPACE}
    istio-injection: disabled
    # istio.io/dataplane-mode: ambient
  name: ${NAMESPACE}
spec:
  finalizers:
  - kubernetes
---
