applications/velero/20_velero.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    kubernetes.io/metadata.name: velero
    app.kubernetes.io/name: velero
spec:
  finalizers:
    - kubernetes
