applications/velero/60-velero-ui.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: velero-ui
  labels:
    kubernetes.io/metadata.name: velero-ui
    app.kubernetes.io/name: velero-ui
spec:
  finalizers:
    - kubernetes
